Build system refactory.

--- a/qtc_packaging/debian_harmattan/rules
+++ b/qtc_packaging/debian_harmattan/rules
@@ -16,23 +16,23 @@
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
-	qmake PREFIX=/usr  # Uncomment this line for use without Qt Creator
+	# qmake PREFIX=/usr# Uncomment this line for use without Qt Creator
 
 	touch configure-stamp
 
 
 build: build-stamp
 
-build-stamp: configure-stamp  
+build-stamp: configure-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
-	$(MAKE) # Uncomment this line for use without Qt Creator
-	#docbook-to-man debian/heebo.sgml > heebo.1
+	# $(MAKE) # Uncomment this line for use without Qt Creator
+	#docbook-to-man debian/heebossomo.sgml > heebossomo.1
 
 	touch $@
 
-clean: 
+clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp configure-stamp
@@ -40,16 +40,16 @@ clean:
 	# Add here commands to clean up after the build process.
 	$(MAKE) clean
 
-	dh_clean 
+	dh_clean
 
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k 
+	dh_clean -k
 	dh_installdirs
 
-	# Add here commands to install the package into debian/heebo.
-	$(MAKE)  INSTALL_ROOT="$(CURDIR)"/debian/heebo install
+	# Add here commands to install the package into debian/heebossomo.
+	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/heebossomo install
 
 
 # Build architecture-independent files here.
@@ -60,12 +60,12 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs 
+	dh_installchangelogs
 	dh_installdocs
 	dh_installexamples
 #	dh_install
 #	dh_installmenu
-#	dh_installdebconf	
+#	dh_installdebconf
 #	dh_installlogrotate
 #	dh_installemacsen
 #	dh_installpam
@@ -82,7 +82,7 @@ binary-arch: build install
 #	dh_perl
 #	dh_makeshlibs
 	dh_installdeb
-	dh_shlibdeps # Uncomment this line for use without Qt Creator
+	# dh_shlibdeps # Uncomment this line for use without Qt Creator
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
