--- a/heebossomo_harmattan.desktop
+++ b/heebossomo_harmattan.desktop
@@ -3,9 +3,9 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Name=Heebo
-Exec=invoker --single-instance --type=d /opt/heebo/bin/heebo
-Icon=/usr/share/icons/hicolor/80x80/apps/heebo80.png
+Name=Heebossomo
+Exec=invoker --single-instance --type=d /opt/heebossomo/bin/heebossomo
+Icon=/usr/share/icons/hicolor/80x80/apps/heebossomo80.png
 X-Window-Icon=
 X-HildonDesk-ShowInToolbar=true
 X-Osso-Type=application/x-executable
